--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.application.name=ms-security
+spring.application.name=ms-sisventas-security
 server.port=8010
 
 logging.level.org.hibernate.SQL=debug
