ajustes Varios - avance venta parte cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/sisventas2019?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=13111991
+
+security.oauth2.resource.filter-order=3
+security.jwt.client-id=sisventasapp
+security.jwt.client-secret=sisventasapp2021codex
+security.signing-key=a3fcad905744bb99a505935ced48218dec099843
+
+security.jwt.grant-type1=password
+security.jwt.grant-type2=refresh_token
+
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+
+security.jwt.resource-ids=sisventasresourceid
