feat: modulo Login - Read Tokens and Refresh Tokens done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,6 @@ security.jwt.grant-type2=refresh_token
 
 security.jwt.scope-read=read
 security.jwt.scope-write=write
+security.jwt.scope-delete=delete
 
 security.jwt.resource-ids=sisventasresourceid
